# lyricstamp

./: .gitignore  LICENSE  README.md  ai_postprocess.py  curcor-template.py  get_lyricstexts.py  launch_lyricstamp.sh  lyrics.txt  lyricstamp.py  phonetics.py  player.py  player_control.py  requirements.txt  web_lyricstamp.py
phonetics/: cantonese.py  japanese.py
postprocess/: README.md  romaji.py
src-tauri/: Cargo.toml  build.rs  icon.icns  tauri.conf.json
src-tauri/src/: main.rs
templates/: ai_processing.html  display.html  karaoke.html  setup.html  timing.html
