[package]
name = "lyricstamp"
version = "0.0.2"
description = "LyricStamp - Lyrics timing tool for Apple Music"
authors = ["Shen Shen <shensquared@mit.edu>"]
license = "MIT"
repository = "https://github.com/shensquared/lyricstamp"
edition = "2025"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
